Change & Version Information
============================

The following is a summary of changes and improvements to
:mod:`eulexistdb`.  New features in each version should be listed, with
any necessary information about installation or upgrade notes.

0.17
----

* Support for filtering on presence of an xpath
  :class:`eulexistdb.query.QuerySet` using ``exists`` filter.
* Support for excluding documents using all existing filters
  with new method :meth:`eulexistdb.query.QuerySet.exclude`.

0.17
----

* Support for restricting xqueries to a single document in
  :class:`eulexistdb.query.QuerySet` with ``document_path`` filter.

0.16
----

* Development requirements can now be installed as an optional requirement
  of the eulexistdb package (``pip install "eulexistdb[dev]"``).
* Unit tests have been updated to use :mod:`nose`
* Provides a nose plugin to set up and tear down an eXist database collection
  for tests, as an alternative to the custom test runners.

0.15.2
------

* Update to latest released version of :mod:`eulxml` (0.18.0) with
  backwards-incompatible DateField/DateTimeField change.

0.15.1 - Bugfix Release
-----------------------

* Support Python 2.7.
* Rearrange test code to support easier recombination.

0.15.0 - Initial Release
------------------------

* Split out existdb-specific components from :mod:`eulcore`; now
  depends on :mod:`eulxml`.
